small fix to my index page

--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<
+
 <head>
   <style>
     body {background-color: darkgreen;}
@@ -6,8 +10,17 @@
     p    {color: white;}
   </style>
 </head>
+
+<body>
+
 <h2>Anton Tonchev</h2>
 <h4>Student</h4>
+
 <p><br /><br /></p>
+
 <p>My Website</p>
 <p>Persistance, Strength, Spirit</p>
+
+
+</body>
+</html>
