--- a/my_website/landingpage.html
+++ b/my_website/landingpage.html
@@ -1,3 +1,11 @@
+
+  <style>
+    body {background-color: darkgreen;}
+    h1   {color: blue;}
+    h4   {color: white;}
+    p    {color: white;}
+  </style>
+
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
     <div class="container">
