--- a/my_website/index.html
+++ b/my_website/index.html
@@ -24,7 +24,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <button type="submit">Login</button>
+    <a href = "landingpage.html"><input type = "button" style = "color:red; height:100px;width:125px; font-size:10px;font-family:'COMIC SANS MS' " value = "LOG TO GLOBAL CHAT"/></a>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
@@ -39,14 +39,13 @@
 
 
 <body>
-
-<h2>Anton Tonchev</h2>
-<h4>Student</h4>
+<h2>Web Development - Home Sample</h2>
+<h4>Contact Info - anton.ivanov.t2@gmail.com</h4>
 
 <p><br /><br /></p>
 
-<p>My Website</p>
-<p>Persistance, Strength, Spirit</p>
+<p>HTML, CSS</p>
+<p>2022</p>
 
 
 </body>
