--- a/my_website/landingpage.html
+++ b/my_website/landingpage.html
@@ -4,6 +4,10 @@
     h1   {color: blue;}
     h4   {color: white;}
     p    {color: white;}
+  .nav-link {color: whtite;}
+ul {
+ background-color: white; 
+}
   </style>
 
 <!--Navbar-->
