--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,7 +5,7 @@
 <head>
   <style>
 
-    body {background-color: LemonChiffon;  font-size:10px;font-family:'COMIC SANS MS'}
+    body {background-color: gold;  font-size:10px;font-family:'COMIC SANS MS'}
 
 #form-wrapper {     
        position: absolute;
