--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-
-
+<meta name="viewport" 
+    content="width=device-width">
 <head>
   <style>
 
-    body {background-color: gold;  font-size:10px;font-family:'COMIC SANS MS'}
+       .content 
+{  
+background-image:url("https://1.bp.blogspot.com/-sTxAHAxirGM/WVbAe2098nI/AAAAAAABENs/_I5sYMYgLOUzaIE7FfF4qdGX-hoAkq9SgCLcBGAs/s1600/Blog_20170624_113552.jpg");  
+}   
+      
 
 #form-wrapper {     
        position: absolute;
@@ -13,11 +17,14 @@
        bottom: 0;
        width: 100%;
 }
+
+
+
   </style>
 </head>
 
 
-
+<div class="content">
 <body>
 <form action="action_page.php" method="post">
  <body>
@@ -27,22 +34,21 @@
             <input type="text" placeholder="Enter Username" name="username" required>  
             <label> </label>   
             <input type="password" placeholder="Enter Password" name="password" required>  
-           <a href = "landingpage.html"><input type = "button" style = "color:red; height:75px;width:100px; font-size:10px;font-family:'COMIC SANS MS' " value = "LOG-IN"/></a>   
+           <a href = "landingpage.html"><input type = "button" style = " height:25px;width:100px; font-size:17px;font-family:'Jazz LET' " value = "Log-in"/></a>   
               
         </form>
     </div>
 
 <p><br /><br /></p>
 
-<h1 style="text-align:left; color:red;">Web Development - Home Sample</h2>
-<h1 style="text-align:left; color:red;">Contact Info - anton.ivanov.t2@gmail.com</h4>
+<h1 style="text-align:left; font-size:30px;font-family:'Brush Script MT'">Web Development - Home Sample</h2>
+<h1 style="text-align:left; font-size:30px; font-family:'Brush Script MT'">Contact Info - anton.ivanov.t2@gmail.com</h4>
 
 <p><br /><br /></p>
-
+<h2  style="text-align:left; font-size:30px; font-family:'Brush Script MT'">HTML, CSS</h5>
+<h2  style="text-align:left; font-size:30px;font-family:'Brush Script MT'">2022</h5>
 </div>
-<h2  style="text-align:left; color:red;">HTML, CSS</h5>
-<h2  style="text-align:left; color:red;">2022</h5>
-
 
 </body>
+</div>
 </html>
