--- a/my_website/landingpage.html
+++ b/my_website/landingpage.html
@@ -7,12 +7,14 @@
   .nav-link {color: whtite;}
 ul {
  background-color: white; 
+
+
 }
   </style>
 
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
-    <div class="container">
+    <div id ="container">
       <!-- Navbar brand -->
       <a class="navbar-brand" rel="noopener" target="_blank" href="#">Navbar</a>
       <!-- Collapse button -->
