--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,7 +5,7 @@
 <head>
   <style>
 
-       .content 
+       .body
 {  
 background-image:url("https://1.bp.blogspot.com/-sTxAHAxirGM/WVbAe2098nI/AAAAAAABENs/_I5sYMYgLOUzaIE7FfF4qdGX-hoAkq9SgCLcBGAs/s1600/Blog_20170624_113552.jpg");  
 }   
