--- a/my_website/landingpage.html
+++ b/my_website/landingpage.html
@@ -1,17 +1,17 @@
-
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<meta name="viewport" 
+    content="width=device-width">
   <style>
-    body {background-color: darkgreen;}
-    h1   {color: blue;}
-    h4   {color: white;}
-    p    {color: white;}
-  .nav-link {color: whtite;}
-ul {
- background-color: white; 
+       body
+{  
+background-image:url("https://1.bp.blogspot.com/-sTxAHAxirGM/WVbAe2098nI/AAAAAAABENs/_I5sYMYgLOUzaIE7FfF4qdGX-hoAkq9SgCLcBGAs/s1600/Blog_20170624_113552.jpg");  
+}  
 
 
 }
   </style>
-
+<body>
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark primary-color">
     <div id ="container">
@@ -57,5 +57,8 @@ ul {
       </div>
       <!-- Collapsible content -->
     </div>
+
   </nav>
+</body>
+</html>
   <!--/.Navbar-->
