--- a/web-site/message-board.html
+++ b/web-site/message-board.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
 <html>
 <head>
-
+<title>Add a Topic</title>
 </head>
 <body>
-<div id="section">
-
-</div>
+<h1>Add a Topic</h1>
+<form method=post action="do_addtopic.php">
+<p><strong>Your E-Mail Address:</strong><br>
+<input type="text" name="topic_owner" size=40 maxlength=150>
+<input type="text" name="topic_title" size=40 maxlength=150>
+<P><strong>Post Text:</strong><br>
+<textarea name="post_text" rows=8 cols=40 wrap=virtual></textarea>
+<P><input type="submit" name="submit" value="Add Topic"></p>
+</form>
 </body>
 </html>
