--- a/web-site/message-board.html
+++ b/web-site/message-board.html
@@ -1,14 +1,22 @@
 <html>
 <head>
 <title>Add a Topic</title>
+<style>
+html {
+ background-image: url('back.jpg');
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ background-size: cover;
+}</style>
 </head>
 <body>
 <h1>Add a Topic</h1>
 <form method=post action="do_addtopic.php">
-<p><strong>Your E-Mail Address:</strong><br>
-<input type="text" name="topic_owner" size=40 maxlength=150>
+<p style="background-color:white;"><strong>Your E-Mail Address:</strong><br>
+<input type="text" name="topic_owner" size=40 maxlength=150><br>
+<P style="background-color:white;"><strong>Topic Title</strong><br>
 <input type="text" name="topic_title" size=40 maxlength=150>
-<P><strong>Post Text:</strong><br>
+<P style="background-color:white;"><strong>Post Text:</strong><br>
 <textarea name="post_text" rows=8 cols=40 wrap=virtual></textarea>
 <P><input type="submit" name="submit" value="Add Topic"></p>
 </form>
