--- a/web-site/message-board.html
+++ b/web-site/message-board.html
@@ -2,6 +2,12 @@
 <head>
 <title>Add a Topic</title>
 <style>
+h1{
+  color:white;
+}
+P {
+  color:white;
+}
 html {
  background-image: url('back.jpg');
  background-repeat: no-repeat;
@@ -12,11 +18,11 @@ html {
 <body>
 <h1>Add a Topic</h1>
 <form method=post action="do_addtopic.php">
-<p style="background-color:white;"><strong>Your E-Mail Address:</strong><br>
+<p><strong>Your E-Mail Address:</strong><br>
 <input type="text" name="topic_owner" size=40 maxlength=150><br>
-<P style="background-color:white;"><strong>Topic Title</strong><br>
+<P><strong>Topic Title</strong><br>
 <input type="text" name="topic_title" size=40 maxlength=150>
-<P style="background-color:white;"><strong>Post Text:</strong><br>
+<P><strong>Post Text:</strong><br>
 <textarea name="post_text" rows=8 cols=40 wrap=virtual></textarea>
 <P><input type="submit" name="submit" value="Add Topic"></p>
 </form>
